--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,22 +17,26 @@ jobs:
     if: ${{ !(github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, '[maven-release-plugin]')) }}
     runs-on: buildjet-4vcpu-ubuntu-2204
     steps: 
+
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: 11
-          distribution: 'temurin'
-          cache: 'maven'
+
       - uses: s4u/maven-settings-action@v3.1.0
         with:
           mirrors: '[
             {
               "id": "usethesource-gh", 
+              "name": "uts mirror",
               "mirrorOf": "usethesource", 
               "url": "${{ secrets.MAVEN_MIRROR_URL }}",
               "username": "github",
               "password": "${{ secrets.MAVEN_MIRROR_PASSWORD }}"
             }]'
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 11
+          distribution: 'temurin'
+          cache: 'maven'
+          overwrite-settings: false
       - name: Run Tests
         run: mvn -B -Drascal.compile.skip -Drascal.tutor.skip -Drascal.test.memory=14 test
 
@@ -65,24 +69,28 @@ jobs:
         with:
           chromedriver-version: '107.0.5304.62'
       - run: which chromedriver
-      
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: 11
-          distribution: 'temurin'
-          cache: 'maven'
 
       - uses: s4u/maven-settings-action@v3.1.0
         with:
           mirrors: '[
             {
               "id": "usethesource-gh", 
+              "name": "uts mirror",
               "mirrorOf": "usethesource", 
               "url": "${{ secrets.MAVEN_MIRROR_URL }}",
               "username": "github",
               "password": "${{ secrets.MAVEN_MIRROR_PASSWORD }}"
             }]'
+      
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 11
+          distribution: 'temurin'
+          cache: 'maven'
+          overwrite-settings: false
+
 
       - name: Compile & Bootstrap
         run: mvn -B compile -Dwebdriver.chrome.driver=/usr/local/bin/chromedriver -Dwebdriver.chrome.browser=`which chrome` 
@@ -163,21 +171,24 @@ jobs:
       MAVEN_OPTS: "-Xmx512M -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
     steps: 
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: 11
-          distribution: 'temurin'
-          cache: 'maven'
+
       - uses: s4u/maven-settings-action@v3.1.0
         with:
           mirrors: '[
             {
               "id": "usethesource-gh", 
+              "name": "uts mirror",
               "mirrorOf": "usethesource", 
               "url": "${{ secrets.MAVEN_MIRROR_URL }}",
               "username": "github",
               "password": "${{ secrets.MAVEN_MIRROR_PASSWORD }}"
             }]'
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 11
+          distribution: 'temurin'
+          cache: 'maven'
+          overwrite-settings: false
 
       - name: Run Tests
         # single quotes to help windows deal with argument splitting
@@ -201,22 +212,24 @@ jobs:
     runs-on: buildjet-2vcpu-ubuntu-2204
     steps: 
       - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: 11
-          distribution: 'temurin'
-          cache: 'maven'
 
       - uses: s4u/maven-settings-action@v3.1.0
         with:
           mirrors: '[
             {
               "id": "usethesource-gh", 
+              "name": "uts mirror",
               "mirrorOf": "usethesource", 
               "url": "${{ secrets.MAVEN_MIRROR_URL }}",
               "username": "github",
               "password": "${{ secrets.MAVEN_MIRROR_PASSWORD }}"
             }]'
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 11
+          distribution: 'temurin'
+          cache: 'maven'
+          overwrite-settings: false
 
       - name: Retrieve dependencies for integration tests
         run: bash src/org/rascalmpl/compiler/lang/rascalcore/check/tests/download-test-jars.sh
