--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 
     <groupId>org.rascalmpl</groupId>
     <artifactId>rascal</artifactId>
-    <version>0.41.0-RC70-SNAPSHOT</version>
+    <version>0.41.0-RC70</version>
     <packaging>jar</packaging>
 
     <scm>
         <developerConnection>scm:git:ssh://git@github.com/usethesource/rascal.git</developerConnection>
-        <tag>v0.41.0-RC52</tag>
+        <tag>v0.41.0-RC70</tag>
     </scm>
 
     <!-- dependency resolution configuration (usethesource) -->
